--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,14 @@ url: https://lancelotzhang0124.github.io/
 # Owner/author information
 owner:
   name: Lingfeng Zhang
-  avatar: hanlin.jpg
+  avatar: Lingfeng.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
+  email: zhanglingfeng@whu.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: lancecai2002
-  github: GuangLun2000
+  github: lancelotzhang0124
   linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   bilibili: 594030035
   researchgate: https://www.researchgate.net/profile/Hanlin-Cai
   zhihu: https://www.zhihu.com/people/chlire
