--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   email: zhanglingfeng@whu.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
+  twitter: researcherzhang
   github: lancelotzhang0124
   linkedin: hanlincai
   bilibili: 594030035
