--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ links:
     url: /publications/
   - title: Awards
     url: /awards/
-  - title: Hobbies
-    url: /hobbies/
+#  - title: Hobbies
+#    url: /hobbies/
   # - title: Startups
     # url: /startups/
 #  - title: Blogs
