--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   twitter: researcherzhang
   github: lancelotzhang0124
   researchgate: https://www.researchgate.net/profile/Zhang-Lingfeng-3
-  instagram: zoloft_0124
+  # instagram: zoloft_0124
   # lastfm:
   # tumblr:
   # For Google Authorship https://plus.google.com/authorship
